# Code2Docs

./: .gitignore  README.md  main.py  requirements.txt
.github/workflows/: docker-deploy.yml  main.yml
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  main.py  readme.md  requirements.txt  resultant.md  vercel.json
backend/src/: main.py
backend/src/services/codebase_service/: CodebaseSchemas.py  app.py  codebase_service.py  routes.py
backend/src/services/db_service/: db.py  helpers.py
backend/src/services/doc_gen_service/: app.py  doc_gen_service.py  routes.py
backend/src/services/docs_service/: app.py  docs_service.py  routes.py
backend/src/services/document_serivice/: document_service.py
backend/src/services/document_service/: app.py  document_service.py  routes.py
backend/src/services/file_reader/: app.py  file_reader.py  routes.py
backend/src/services/filehandler/: basemodels.py  filehandler.py  routes.py
backend/src/services/github_auth_service/: app.py  github_auth_service.py  routes.py
backend/src/services/github_service/: app.py  github_service.py  routes.py
backend/src/services/utils/: jwt_utils.py
cli/: README.md  pyproject.toml  requirements.txt
cli/c2d/: main.py
cli/c2d/utils/: file_processes.py  parsers.py  prompt_templates.py  scan.py  tasks.py
cli/code2docs_cli/: main.py
cli/code2docs_cli/utils/: file_processes.py  prompt_templates.py  rag.py  scan.py  tasks.py
code2docs-cli/: README.md  pyproject.toml
code2docs-cli/c2d/: main.py
code2docs-cli/code2docs_cli/: main.py
code2docs-landing/: .gitignore  package-lock.json  package.json
code2docs-landing/src/: App.tsx
code2docs-landing2/: package-lock.json  package.json  tailwind.config.ts
code2docs-landing2/app/: globals.css  page.tsx
code2docs-landing2/app/components/: HeroSection.tsx
code2docs-ui/: index.html  package-lock.json  package.json
code2docs-ui/src/: App.tsx  constants.ts  main.css  main.tsx
code2docs-ui/src/components/auth/: AuthContainer.tsx
code2docs-ui/src/components/global/: Navbar.tsx
code2docs-ui/src/global/: constants.ts  types.ts
code2docs-ui/src/pages/: Homepage.tsx  Landingpage.tsx
code2docs-ui/src/pages/authentication/: ErrorPage.tsx  GithubRedirectPage.tsx  LoginPage.tsx  LogoutPage.tsx  RegistrationPage.tsx
code2docs-ui/src/pages/codebases/: CodeBaseListPage.tsx  IndividualCodebasePage.tsx
code2docs-ui/src/pages/documentations/: DocumentationListPage.tsx  IndividualDocumentationPage.tsx
code2docs-ui/src/pages/user/: UserAccountPage.tsx
code2docs-ui/src/store/: userStore.ts
demo-ui/: .gitignore  index.html  package-lock.json  package.json
demo-ui/src/: App.tsx  main.css  main.tsx
demo-ui/src/helpers/: FileNode.ts
demo-ui/src/pages/: BrowsePage.tsx  DemoPage.tsx  UploadPage.tsx
markdown_files/: api_doc.md  classes.md  dataase_schema.md  functions.md  gitlab_doc.md
(+10 files in other folders)
