[tool.poetry]
name = "code2docs-cli"
version = "1.3.2"
description = "Code2Docs: An AI-powered, open source CLI tool for generating inline code documentation, API references, database schema docs, and project READMEs from your codebase."
authors = ["xKarinSan <setsunayukii88@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
c2d = "code2docs_cli.main:main"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "1.1.0"
typer = "0.16"
langchain = "0.3.23"
langchain-openai = "0.3.12"
openai = "1.74.0"
rich = "14.0.0"
pathspec = "0.12.1"
langchain-chroma = "0.2.2"
langchain-core = "0.3.51"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
