[tool.poetry]
name = "c2d"
version = "0.1.0"
description = ""
authors = ["xKarinSan <setsunayukii88@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
c2d = "c2d.main:main"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "1.1.0"
typer = "0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
